--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="card-number">
                             <label for="cardNumber">Card Number:</label>
-                            <input type="text" autocomplete="off" placeholder="Card holder name" name="cardNumber" id="cardNumber" onkeypress="return event.charCode>=48 && event.charCode<=57" maxlength="19" required>
+                            <input type="text" autocomplete="off" placeholder="Card holder name" name="cardNumber" id="cardNumber" onkeypress="return event.charCode>=48 && event.charCode<=57" minlength="19" maxlength="19" required>
                         </div>
                         <div class="expiry-date">
                             <label for="expDate">Validity:</label>
